--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   },
   "name": "github-favorites",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "devDependencies": {},
   "scripts": {
     "start": "lite-server"
   },
-  "author": "",
+  "author": "smoothemerson",
   "license": "ISC",
-  "description": ""
+  "description": "A simple project just to practice Javascript by Rocketseat"
 }
